# cahttp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  body.data  mem.txt
cahttp/:  BaseCnn.cpp  AsyncFile.cpp  AsyncFile.h  BaseCnn.h  BaseConnection.cpp  BaseConnection.h  BaseMsg.cpp  BaseMsg.h  BytePacketBuf.cpp  BytePacketBuf.h  CaHttp404UrlCtrl.h  CaHttpBaseMsg.cpp  CaHttpBaseMsg.h  CaHttpCommon.cpp  CaHttpCommon.h  CaHttpFrame.cpp  CaHttpFrame.h  CaHttpMsg.cpp  CaHttpMsg.h  CaHttpReq.h  CaHttpReqMan.h  CaHttpServer.cpp  CaHttpServer.h  CaHttpSvrReq.cpp  CaHttpSvrReq.h  CaHttpUrlCtrl.cpp  CaHttpUrlCtrl.h  CaHttpUrlParser.cpp  CaRangeParser.h  CaSimpleHeaderEnc.cpp  Cbuf.h  ChunkEndPacketBuf.cpp  FilePacketBuf.cpp  FilePacketBuf.h  GenericUrlCtrl.cpp  GenericUrlCtrl.h  HttpCnn.cpp  HttpCnn.h  HttpCnnMan.cpp  HttpCnnMan.h  (+73 more)
src/: CaContentRangeParser.cpp  CaContentRangeParser.h  CaHttp404UrlCtrl.cpp  CaHttpCommon.cpp  CaHttpCommon.h  CaHttpMsg.h  CaHttpReq.cpp  CaHttpReqMan.cpp  CaHttpServer.cpp  CaHttpServer.h  CaHttpSvrReq.cpp  CaHttpUrlCtrl.cpp  CaHttpUrlCtrl.h  CaHttpUrlParser.h  CaRangeParser.cpp  CaSimpleHeaderEnc.cpp  CaSimpleHeaderEnc.h  HandleFactory.cpp  HandleFactory.h  HttpBaseReadStream.cpp  HttpBaseReadStream.h  HttpBaseWriteStream.h  HttpCnn.h  HttpFileWriteStream.h  HttpHeaderSet.cpp  HttpHeaderSet.h  HttpServCnnCtx.cpp  HttpStringReadStream.cpp  HttpStringReadStream.h  HttpStringWriteStream.h  SDPParser.cpp  ServCnn.cpp  ServTask.h  SimpleBuf.cpp  flog.cpp  http_parser.h
test/: echotest.sh  piplining.py  refclient.js  refclient.py  refserver.js  svr.py  (+15 more)
(+42 files in other folders)
